--- a/angular.json
+++ b/angular.json
@@ -6,7 +6,7 @@
     "version": 1,
     "newProjectRoot": "projects",
     "projects": {
-        "terna-launcher-app": {
+        "school-app": {
             "projectType": "application",
             "schematics": {
                 "@schematics/angular:application": {
@@ -20,7 +20,7 @@
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
                     "options": {
-                        "outputPath": "dist/terna-launcher-app",
+                        "outputPath": "dist/school-app",
                         "index": "src/index.html",
                         "main": "src/main.ts",
                         "polyfills": "src/polyfills.ts",
@@ -67,10 +67,10 @@
                     "builder": "@angular-devkit/build-angular:dev-server",
                     "configurations": {
                         "production": {
-                            "browserTarget": "terna-launcher-app:build:production"
+                            "browserTarget": "school-app:build:production"
                         },
                         "development": {
-                            "browserTarget": "terna-launcher-app:build:development"
+                            "browserTarget": "school-app:build:development"
                         }
                     },
                     "defaultConfiguration": "development"
@@ -78,7 +78,7 @@
                 "extract-i18n": {
                     "builder": "@angular-devkit/build-angular:extract-i18n",
                     "options": {
-                        "browserTarget": "terna-launcher-app:build"
+                        "browserTarget": "school-app:build"
                     }
                 },
                 "test": {
@@ -97,5 +97,5 @@
             }
         }
     },
-    "defaultProject": "terna-launcher-app"
+    "defaultProject": "school-app"
 }
