--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "terna-launcher-app",
+    "name": "school-app",
     "version": "0.0.0",
     "main": "app.js",
     "scripts": {
@@ -24,13 +24,15 @@
         "@angular/router": "~13.2.0",
         "bootstrap": "^5.1.3",
         "crypto-js": "^4.1.1",
+        "electron-browser-storage": "^1.0.7",
+        "electron-packager": "^17.1.1",
+        "file-system": "^2.2.2",
         "fs": "^0.0.1-security",
         "jquery": "^3.6.0",
-        "knex": "^1.0.4",
-        "mysql2": "^2.3.3",
+        "material-design-icons": "^3.0.1",
+        "material-icons": "^1.13.1",
         "path": "^0.12.7",
         "rxjs": "~7.5.0",
-        "ts-md5": "^1.2.11",
         "tslib": "^2.3.0",
         "zone.js": "~0.11.4"
     },
@@ -40,7 +42,7 @@
         "@angular/compiler-cli": "~13.2.0",
         "@types/jasmine": "~3.10.0",
         "@types/jquery": "^3.5.14",
-        "@types/node": "^14.18.12",
+        "@types/node": "^14.18.16",
         "electron": "^13.6.6",
         "jasmine-core": "~4.0.0",
         "karma": "~6.3.0",
